--- a/index.html
+++ b/index.html
@@ -1,44 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aegina Suite Ike</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Aegina Suite Ike</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header class="hero">
-        <h1>Aegina Suite Ike</h1>
-        <p class="tagline">Property Management in the Saronic Gulf</p>
-    </header>
+  <header class="hero">
+    <div class="container">
+      <h1>Aegina Suite Ike</h1>
+      <p class="tagline">Property Management in the Saronic Gulf</p>
+    </div>
+  </header>
 
-    <section class="about">
-        <h2>About Us</h2>
-        <p>Aegina Suite Ike is a premium property management company located in the stunning Saronic Gulf. We specialize in managing high-end hospitality properties and suites, delivering an unmatched experience for guests and property owners alike. Our approach blends local expertise with modern design and management techniques, ensuring every property reaches its full potential.</p>
+  <main class="container">
+    <section class="card about">
+      <h2>About Us</h2>
+      <p>
+        Aegina Suite Ike is a premium property management company located in the stunning Saronic Gulf. We specialize in managing high-end hospitality properties and suites, delivering an unmatched experience for guests and property owners alike. Our approach blends local expertise with modern design and management techniques, ensuring every property reaches its full potential.
+      </p>
     </section>
 
-    <section class="team">
-        <h2>Our Founders</h2>
+    <section class="card team">
+      <h2>Our Founders</h2>
+      <div class="team-members">
         <div class="team-member">
-            <h3>Panagiotis Markidis</h3>
-            <p>CEO & Co-founder</p>
-            <p>Panagiotis leads Aegina Suite Ike with a strategic vision and a deep understanding of the Greek property market. His leadership ensures operational excellence and premium service delivery.</p>
+          <h3>Panagiotis Markidis</h3>
+          <p class="role">CEO & Co-founder</p>
+          <p>
+            Panagiotis leads Aegina Suite Ike with a strategic vision and a deep understanding of the Greek property market. His leadership ensures operational excellence and premium service delivery.
+          </p>
         </div>
         <div class="team-member">
-            <h3>Christina Economopoulou</h3>
-            <p>COO & Co-founder</p>
-            <p>Christina oversees daily operations and brings a hospitality-first mindset to everything we do. Her commitment to detail and guest satisfaction drives the company forward.</p>
+          <h3>Christina Economopoulou</h3>
+          <p class="role">COO & Co-founder</p>
+          <p>
+            Christina oversees daily operations and brings a hospitality-first mindset to everything we do. Her commitment to detail and guest satisfaction drives the company forward.
+          </p>
         </div>
+      </div>
     </section>
 
-    <section class="report">
-        <h2>Annual Report</h2>
-        <p>Download our latest annual earnings report below:</p>
-        <a href="AeginaSuite_AnnualReport.pdf" download class="download-btn">📄 Download Report</a>
+    <section class="card report">
+      <h2>Annual Report</h2>
+      <p>Download our latest annual earnings report below:</p>
+      <a href="AeginaSuite_AnnualReport.pdf" download class="download-btn" aria-label="Download Annual Earnings Report">
+        📄 Download Report
+      </a>
     </section>
+  </main>
 
-    <footer>
-        <p>&copy; 2025 Aegina Suite Ike. All rights reserved.</p>
-    </footer>
+  <footer>
+    <div class="container">
+      <p>&copy; 2025 Aegina Suite Ike. All rights reserved.</p>
+    </div>
+  </footer>
 </body>
 </html>
