--- a/index.html
+++ b/index.html
@@ -8,45 +8,46 @@
 </head>
 <body>
   <header>
-    <div class="container">
-      <h1>Aegina Suite Ike</h1>
-      <p>Property Management in the Saronic Gulf</p>
+    <div class="nav">
+      <div class="logo">Aegina Suite Ike</div>
+    </div>
+    <div class="hero-text">
+      <h1>Modern Property Management in the Saronic Gulf</h1>
+      <p>We help properties reach their full potential through luxury service, expert care, and island-rooted excellence.</p>
     </div>
   </header>
 
-  <section class="about container">
-    <h2>About Us</h2>
-    <p>
-      Aegina Suite Ike is a boutique property management firm operating in the stunning Saronic Gulf.
-      We specialize in high-end hospitality and full-service property solutions for modern living.
-    </p>
-  </section>
+  <main class="container">
+    <section class="about">
+      <h2>About Us</h2>
+      <p>
+        Aegina Suite Ike is a premium property management firm offering boutique hospitality services across the Saronic Gulf. 
+        We manage high-end vacation rentals and properties with care, integrity, and deep local knowledge.
+      </p>
+    </section>
 
-  <section class="team container">
-    <h2>Our Founders</h2>
-    <div class="team-members">
-      <div class="member">
-        <h3>Panagiotis Markidis</h3>
-        <p>CEO & Co-Founder</p>
+    <section class="team">
+      <h2>Leadership Team</h2>
+      <div class="team-grid">
+        <div class="card">
+          <h3>Panagiotis Markidis</h3>
+          <p>CEO & Co-Founder</p>
+        </div>
+        <div class="card">
+          <h3>Christina Economopoulou</h3>
+          <p>COO & Co-Founder</p>
+        </div>
       </div>
-      <div class="member">
-        <h3>Christina Economopoulou</h3>
-        <p>COO & Co-Founder</p>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <section class="report container">
-    <h2>Download Our Annual Earnings Report</h2>
-    <a class="download-button" href="AeginaSuite_AnnualReport.pdf" download>
-      📄 Download Report (PDF)
-    </a>
-  </section>
+    <section class="report">
+      <h2>Annual Report</h2>
+      <a class="button" href="AeginaSuite_AnnualReport.pdf" download>📄 Download 2025 Report (PDF)</a>
+    </section>
+  </main>
 
   <footer>
-    <div class="container">
-      <p>© 2025 Aegina Suite Ike. All rights reserved.</p>
-    </div>
+    <p>© 2025 Aegina Suite Ike. All rights reserved.</p>
   </footer>
 </body>
 </html>
