--- a/index.html
+++ b/index.html
@@ -2,47 +2,49 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Aegina Suite Ike</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
 </head>
 <body>
   <header>
-    <div class="nav">
+    <nav class="navbar">
       <div class="logo">Aegina Suite Ike</div>
-    </div>
-    <div class="hero-text">
+    </nav>
+    <section class="hero">
       <h1>Modern Property Management in the Saronic Gulf</h1>
-      <p>We help properties reach their full potential through luxury service, expert care, and island-rooted excellence.</p>
-    </div>
+      <p>Luxury service, expert care, and island-rooted excellence.</p>
+    </section>
   </header>
 
   <main class="container">
     <section class="about">
       <h2>About Us</h2>
       <p>
-        Aegina Suite Ike is a premium property management firm offering boutique hospitality services across the Saronic Gulf. 
-        We manage high-end vacation rentals and properties with care, integrity, and deep local knowledge.
+        Aegina Suite Ike is a premium property management firm offering boutique hospitality services
+        across the Saronic Gulf. We manage high-end vacation rentals and properties with care, integrity,
+        and deep local knowledge.
       </p>
     </section>
 
     <section class="team">
       <h2>Leadership Team</h2>
       <div class="team-grid">
-        <div class="card">
+        <article class="team-card">
           <h3>Panagiotis Markidis</h3>
           <p>CEO & Co-Founder</p>
-        </div>
-        <div class="card">
+        </article>
+        <article class="team-card">
           <h3>Christina Economopoulou</h3>
           <p>COO & Co-Founder</p>
-        </div>
+        </article>
       </div>
     </section>
 
     <section class="report">
       <h2>Annual Report</h2>
-      <a class="button" href="AeginaSuite_AnnualReport.pdf" download>📄 Download 2025 Report (PDF)</a>
+      <a href="AeginaSuite_AnnualReport.pdf" download class="btn-download">📄 Download 2025 Report (PDF)</a>
     </section>
   </main>
 
