--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Aegina Suite Ike</title>
-  <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
@@ -22,9 +22,8 @@
     <section class="about">
       <h2>About Us</h2>
       <p>
-        Aegina Suite Ike is a premium property management firm offering boutique hospitality services
-        across the Saronic Gulf. We manage high-end vacation rentals and properties with care, integrity,
-        and deep local knowledge.
+        Aegina Suite Ike is a premium property management firm offering boutique hospitality services across the Saronic Gulf.
+        We manage high-end vacation rentals and properties with care, integrity, and deep local knowledge.
       </p>
     </section>
 
@@ -44,7 +43,9 @@
 
     <section class="report">
       <h2>Annual Report</h2>
-      <a href="AeginaSuite_AnnualReport.pdf" download class="btn-download">📄 Download 2025 Report (PDF)</a>
+      <a href="AeginaSuite_AnnualReport.pdf" download class="btn-download" aria-label="Download Annual Report">
+        📄 Download 2025 Report (PDF)
+      </a>
     </section>
   </main>
 
