--- a/index.html
+++ b/index.html
@@ -4,286 +4,61 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Aegina Suite IKE - Property Management</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
-  <style>
-    /* Base reset */
-    *, *::before, *::after {
-      box-sizing: border-box;
-    }
-    body {
-      margin: 0;
-      font-family: 'Inter', sans-serif;
-      background: linear-gradient(135deg, #e3dbd0, #c2b8a3);
-      color: #3c3c3c;
-      line-height: 1.6;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-    a {
-      text-decoration: none;
-      color: inherit;
-    }
-    /* Navbar */
-    nav {
-      background-color: rgba(131, 112, 96, 0.95);
-      padding: 18px 40px;
-      position: sticky;
-      top: 0;
-      z-index: 100;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.12);
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      color: #faf8f5;
-      font-weight: 700;
-      font-size: 1.4rem;
-      letter-spacing: 1.2px;
-      user-select: none;
-    }
-    nav .logo {
-      font-weight: 900;
-      font-size: 1.6rem;
-      letter-spacing: 1.5px;
-    }
-    nav ul {
-      list-style: none;
-      display: flex;
-      gap: 24px;
-      margin: 0;
-      padding: 0;
-    }
-    nav ul li a:hover {
-      color: #d6c9b8;
-    }
-
-    /* Hero Section */
-    .hero {
-      padding: 120px 20px 70px;
-      max-width: 960px;
-      margin: 0 auto;
-      text-align: center;
-      color: #4b3f36;
-      text-shadow: 0 0 4px rgba(255 255 255 / 0.6);
-    }
-    .hero h1 {
-      font-size: 3.8rem;
-      margin-bottom: 20px;
-      font-weight: 900;
-      line-height: 1.1;
-    }
-    .hero p {
-      font-size: 1.5rem;
-      max-width: 720px;
-      margin: 0 auto;
-      font-weight: 500;
-      opacity: 0.85;
-      line-height: 1.5;
-    }
-
-    /* Main Container */
-    main.container {
-      max-width: 960px;
-      margin: 0 auto;
-      padding: 50px 20px 80px;
-      flex-grow: 1;
-    }
-
-    /* About Section */
-    section.about {
-      margin-bottom: 80px;
-      text-align: center;
-      color: #5a5047;
-    }
-    section.about h2 {
-      font-size: 2.8rem;
-      margin-bottom: 30px;
-      font-weight: 700;
-      letter-spacing: 0.05em;
-    }
-    section.about p {
-      font-size: 1.2rem;
-      max-width: 700px;
-      margin: 0 auto;
-      line-height: 1.65;
-      opacity: 0.85;
-    }
-
-    /* Team Section */
-    section.team {
-      margin-bottom: 100px;
-    }
-    section.team h2 {
-      font-size: 2.8rem;
-      text-align: center;
-      margin-bottom: 40px;
-      color: #6a5b4d;
-      font-weight: 700;
-      letter-spacing: 0.06em;
-    }
-    .team-cards {
-      display: flex;
-      gap: 40px;
-      justify-content: center;
-      flex-wrap: wrap;
-    }
-    .team-card {
-      background: #faf8f5;
-      border-radius: 16px;
-      box-shadow: 0 10px 30px rgba(129, 106, 83, 0.18);
-      flex: 1 1 320px;
-      max-width: 320px;
-      padding: 30px 24px;
-      text-align: center;
-      transition: box-shadow 0.3s ease, transform 0.3s ease;
-    }
-    .team-card:hover {
-      box-shadow: 0 18px 40px rgba(129, 106, 83, 0.32);
-      transform: translateY(-7px);
-    }
-    .team-photo {
-      width: 130px;
-      height: 130px;
-      border-radius: 50%;
-      background-color: #c2b8a3;
-      margin: 0 auto 20px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 3rem;
-      color: #837060;
-      font-weight: 900;
-      user-select: none;
-      box-shadow: 0 6px 12px rgba(131, 112, 96, 0.3);
-    }
-    .team-card h3 {
-      margin: 0 0 8px;
-      font-size: 1.4rem;
-      font-weight: 700;
-      color: #6a5b4d;
-    }
-    .team-card p {
-      margin: 0;
-      font-weight: 600;
-      font-size: 1.05rem;
-      color: #7b6f66;
-    }
-
-    /* Report Section */
-    .report {
-      text-align: center;
-      margin-bottom: 80px;
-    }
-    .btn-download {
-      background-color: #837060;
-      color: #faf8f5;
-      font-weight: 700;
-      font-size: 1.25rem;
-      padding: 16px 48px;
-      border-radius: 48px;
-      box-shadow: 0 6px 20px rgba(131, 112, 96, 0.45);
-      transition: background-color 0.3s ease, box-shadow 0.3s ease;
-      user-select: none;
-      display: inline-block;
-      cursor: pointer;
-    }
-    .btn-download:hover,
-    .btn-download:focus {
-      background-color: #6b584c;
-      box-shadow: 0 10px 28px rgba(107, 88, 76, 0.65);
-      outline: none;
-    }
-
-    /* Footer */
-    footer {
-      background: #c2b8a3;
-      color: #4b3f36;
-      text-align: center;
-      padding: 28px 20px;
-      font-weight: 600;
-      user-select: none;
-      font-size: 0.95rem;
-      letter-spacing: 0.05em;
-      box-shadow: inset 0 1px 2px rgba(255 255 255 / 0.3);
-    }
-
-    /* Responsive */
-    @media (max-width: 768px) {
-      nav {
-        flex-direction: column;
-        gap: 10px;
-        font-size: 1.2rem;
-      }
-      .hero h1 {
-        font-size: 2.8rem;
-      }
-      .hero p {
-        font-size: 1.15rem;
-      }
-      .team-cards {
-        flex-direction: column;
-        gap: 30px;
-      }
-      .team-card {
-        max-width: 100%;
-      }
-      main.container {
-        padding: 40px 15px 60px;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <nav>
     <div class="logo">Aegina Suite IKE</div>
     <ul>
-      <li><a href="#about">About</a></li>
+      <li><a href="#about">About Us</a></li>
       <li><a href="#team">Team</a></li>
-      <li><a href="#report">Report</a></li>
+      <li><a href="#report">Annual Report</a></li>
     </ul>
   </nav>
 
-  <section class="hero" aria-label="Introduction">
+  <section class="hero">
     <h1>Welcome to Aegina Suite IKE</h1>
-    <p>Your trusted property management partner in the Saronic Gulf, delivering excellence and care for your investments.</p>
+    <p>Your trusted property management company in the Saronic Gulf</p>
   </section>
 
   <main class="container">
-    <section id="about" class="about" aria-label="About Us">
+    <section id="about" class="about">
       <h2>About Us</h2>
       <p>
-        Aegina Suite IKE specializes in premium property management services across the beautiful Saronic Gulf islands.
-        We offer tailored solutions that maximize value for property owners while ensuring top-quality experiences for tenants.
-        With deep local knowledge and professional expertise, our mission is to build lasting relationships based on trust and results.
+        At Aegina Suite IKE, we specialize in comprehensive property management
+        services across the beautiful Saronic Gulf. Our mission is to provide
+        seamless, trustworthy, and personalized care for your properties.
       </p>
     </section>
 
-    <section id="team" class="team" aria-label="Our Team">
-      <h2>Meet Our Leadership</h2>
+    <section id="team" class="team">
+      <h2>Meet Our Team</h2>
       <div class="team-cards">
-        <article class="team-card" role="group" aria-labelledby="ceo-name">
-          <div class="team-photo" aria-hidden="true">PM</div>
-          <h3 id="ceo-name">Panagiotis Markidis</h3>
+        <div class="team-card">
+          <div class="team-photo">PM</div>
+          <h3>Panagiotis Markidis</h3>
           <p>CEO &amp; Co-Founder</p>
-        </article>
-
-        <article class="team-card" role="group" aria-labelledby="coo-name">
-          <div class="team-photo" aria-hidden="true">CE</div>
-          <h3 id="coo-name">Christina Economopoulou</h3>
+        </div>
+        <div class="team-card">
+          <div class="team-photo">CE</div>
+          <h3>Christina Economopoulou</h3>
           <p>COO &amp; Co-Founder</p>
-        </article>
+        </div>
       </div>
     </section>
 
-    <section id="report" class="report" aria-label="Annual Earnings Report">
-      <a href="annual-earnings-report.pdf" download class="btn-download" aria-label="Download the Annual Earnings Report">
-        Download Annual Earnings Report
-      </a>
+    <section id="report" class="report">
+      <a
+        href="annual-earnings-report.pdf"
+        download="AeginaSuite_Annual_Earnings_Report.pdf"
+        class="btn-download"
+        >Download Annual Earnings Report</a
+      >
     </section>
   </main>
 
   <footer>
-    &copy; 2025 Aegina Suite IKE — Property Management in the Saronic Gulf
+    &copy; 2025 Aegina Suite IKE. All rights reserved.
   </footer>
 </body>
 </html>
