--- a/index.html
+++ b/index.html
@@ -3,62 +3,65 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Aegina Suite IKE - Property Management</title>
+  <title>Aegina Suite IKE</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <nav>
-    <div class="logo">Aegina Suite IKE</div>
-    <ul>
-      <li><a href="#about">About Us</a></li>
-      <li><a href="#team">Team</a></li>
-      <li><a href="#report">Annual Report</a></li>
-    </ul>
+  <nav class="navbar">
+    <div class="container nav-container">
+      <div class="logo">Aegina Suite IKE</div>
+      <ul class="nav-links">
+        <li><a href="#about">About Us</a></li>
+        <li><a href="#team">Team</a></li>
+        <li><a href="#report">Annual Report</a></li>
+      </ul>
+    </div>
   </nav>
 
-  <section class="hero">
-    <h1>Welcome to Aegina Suite IKE</h1>
-    <p>Your trusted property management company in the Saronic Gulf</p>
-  </section>
+  <header class="hero">
+    <div class="container hero-content">
+      <h1>Property Management in the Saronic Gulf</h1>
+      <p>Reliable, Transparent & Tailored Solutions for Your Properties</p>
+    </div>
+  </header>
 
-  <main class="container">
-    <section id="about" class="about">
+  <main class="container main-content">
+    <section id="about" class="section about">
       <h2>About Us</h2>
       <p>
-        At Aegina Suite IKE, we specialize in comprehensive property management
-        services across the beautiful Saronic Gulf. Our mission is to provide
-        seamless, trustworthy, and personalized care for your properties.
+        Aegina Suite IKE provides expert property management services across the
+        stunning Saronic Gulf region. We focus on personalized care, trusted
+        partnerships, and exceptional client experiences.
       </p>
     </section>
 
-    <section id="team" class="team">
+    <section id="team" class="section team">
       <h2>Meet Our Team</h2>
       <div class="team-cards">
-        <div class="team-card">
-          <div class="team-photo">PM</div>
+        <div class="card">
+          <div class="avatar">PM</div>
           <h3>Panagiotis Markidis</h3>
-          <p>CEO &amp; Co-Founder</p>
+          <p>CEO & Co-Founder</p>
         </div>
-        <div class="team-card">
-          <div class="team-photo">CE</div>
+        <div class="card">
+          <div class="avatar">CE</div>
           <h3>Christina Economopoulou</h3>
-          <p>COO &amp; Co-Founder</p>
+          <p>COO & Co-Founder</p>
         </div>
       </div>
     </section>
 
-    <section id="report" class="report">
-      <a
-        href="annual-earnings-report.pdf"
-        download="AeginaSuite_Annual_Earnings_Report.pdf"
-        class="btn-download"
-        >Download Annual Earnings Report</a
-      >
+    <section id="report" class="section report">
+      <a href="annual-earnings-report.pdf" download class="btn-download">
+        Download Annual Earnings Report
+      </a>
     </section>
   </main>
 
-  <footer>
-    &copy; 2025 Aegina Suite IKE. All rights reserved.
+  <footer class="footer">
+    <div class="container">
+      &copy; 2025 Aegina Suite IKE. All rights reserved.
+    </div>
   </footer>
 </body>
 </html>
