--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Aegina Suite IKE</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+</head>
+<body>
+  <nav class="navbar">
+    <div class="container nav-container">
+      <div class="logo">Aegina Suite IKE</div>
+      <ul class="nav-links">
+        <li><a href="#about">About Us</a></li>
+        <li><a href="#team">Our Team</a></li>
+        <li><a href="#report">Report</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <header class="hero">
+    <div class="container">
+      <h1>Property Management in the Saronic Gulf</h1>
+      <p>Experience seamless property management with Aegina Suite IKE.</p>
+    </div>
+  </header>
+
+  <main class="main-content container">
+    <section id="about" class="section about">
+      <h2>About Us</h2>
+      <p>
+        Aegina Suite IKE is a premier property management company focused on delivering personalized and trustworthy services in the Saronic Gulf. We specialize in maximizing property value and ensuring tenant satisfaction.
+      </p>
+    </section>
+
+    <section id="team" class="section team">
+      <h2>Our Team</h2>
+      <div class="team-cards">
+        <div class="card">
+          <div class="avatar">PM</div>
+          <h3>Panagiotis Markidis</h3>
+          <p>CEO & Co-Founder</p>
+        </div>
+        <div class="card">
+          <div class="avatar">CE</div>
+          <h3>Christina Economopoulou</h3>
+          <p>COO & Co-Founder</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="report" class="section report">
+      <h2>Annual Earnings Report</h2>
+      <a href="annual_earnings_report.pdf" download class="btn-download">Download Report</a>
+    </section>
+  </main>
+
+  <section id="animation-canvas">
+    <canvas id="three-canvas"></canvas>
+  </section>
+
+  <footer class="footer">
+    &copy; 2025 Aegina Suite IKE — All rights reserved.
+  </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r154/three.min.js"></script>
+  <script src="app.js"></script>
+</body>
+</html>
