--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -22,7 +21,7 @@
 
   <header class="hero">
     <div class="container">
-      <h1>Property Management in the Saronic Gulf</h1>
+      <h1 id="animated-title">Property Management in the Saronic Gulf</h1>
       <p>Experience seamless property management with Aegina Suite IKE.</p>
     </div>
   </header>
@@ -38,15 +37,21 @@
     <section id="team" class="section team">
       <h2>Our Team</h2>
       <div class="team-cards">
-        <div class="card">
+        <div class="card expandable" tabindex="0" aria-expanded="false" role="button" aria-label="More info about Panagiotis Markidis">
           <div class="avatar">PM</div>
-          <h3>Panagiotis Markidis</h3>
-          <p>CEO & Co-Founder</p>
+          <h3>PANAGIOTIS MARKIDIS</h3>
+          <p class="role">CEO & Co-Founder</p>
+          <div class="more-info" hidden>
+            <p>Panagiotis has 15+ years in property management with expertise in investment strategies and client relations.</p>
+          </div>
         </div>
-        <div class="card">
+        <div class="card expandable" tabindex="0" aria-expanded="false" role="button" aria-label="More info about Christina Economopoulou">
           <div class="avatar">CE</div>
-          <h3>Christina Economopoulou</h3>
-          <p>COO & Co-Founder</p>
+          <h3>CHRISTINA ECONOMOPOULOU</h3>
+          <p class="role">COO & Co-Founder</p>
+          <div class="more-info" hidden>
+            <p>Christina leads operations, focusing on customer experience and efficient management practices.</p>
+          </div>
         </div>
       </div>
     </section>
@@ -61,11 +66,16 @@
     <canvas id="three-canvas"></canvas>
   </section>
 
+  <div id="custom-cursor"></div>
+
   <footer class="footer">
     &copy; 2025 Aegina Suite IKE — All rights reserved.
   </footer>
 
+  <!-- Libraries -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r154/three.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  
   <script src="app.js"></script>
 </body>
 </html>
