--- a/index.html
+++ b/index.html
@@ -2,80 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Aegina Suite IKE</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Aegina Suite Ike</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 </head>
 <body>
-  <nav class="navbar">
-    <div class="container nav-container">
-      <div class="logo">Aegina Suite IKE</div>
-      <ul class="nav-links">
-        <li><a href="#about">About</a></li>
-        <li><a href="#team">Team</a></li>
-        <li><a href="#report">Report</a></li>
-      </ul>
-    </div>
-  </nav>
-
-  <header class="hero">
-    <div class="container">
-      <h1 id="animated-title">Property Management in the Saronic Gulf</h1>
-      <p>Your trusted partner in premium property management.</p>
-    </div>
-  </header>
-
-  <main class="container">
-    <section id="about" class="section">
-      <h2>About Us</h2>
-      <p>Aegina Suite IKE is a premium property management company focused on delivering personalized, high-quality service in the Saronic Gulf. We ensure seamless property operations, from leasing to maintenance and guest care.</p>
-    </section>
-
-    <section id="team" class="section">
-      <h2>Our Team</h2>
-      <div class="team-cards">
-        <div class="card" onclick="toggleExpand(this)">
-          <div class="avatar">PM</div>
-          <h3>PANAGIOTIS MARKIDIS</h3>
-          <p class="role">CEO & Co-Founder</p>
-          <div class="more-info">
-            <p>Panagiotis has over 15 years in real estate and finance. He leads the strategic vision and business development of Aegina Suite IKE.</p>
-          </div>
-        </div>
-        <div class="card" onclick="toggleExpand(this)">
-          <div class="avatar">CE</div>
-          <h3>CHRISTINA ECONOMOPOULOU</h3>
-          <p class="role">COO & Co-Founder</p>
-          <div class="more-info">
-            <p>Christina brings hospitality and operations expertise to ensure exceptional client experience and streamlined property services.</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="report" class="section">
-      <h2>Annual Earnings Report</h2>
-      <a href="annual_earnings_report.pdf" download class="btn-download">Download the Report</a>
-    </section>
-  </main>
-
+  <canvas id="three-canvas"></canvas>
   <div id="custom-cursor"></div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-  <script>
-    gsap.fromTo(\"#animated-title\", {opacity: 0, y: 50}, {opacity: 1, y: 0, duration: 1.5, ease: \"power2.out\"});
-    
-    function toggleExpand(el) {
-      el.classList.toggle('expanded');
-    }
+  <header>
+    <h1 id="animated-title">Property Management in the Saronic Gulf</h1>
+    <p class="subtitle">Delivering boutique luxury experiences in Aegina, Hydra, and Poros</p>
+  </header>
 
-    const cursor = document.getElementById(\"custom-cursor\");
-    document.addEventListener(\"mousemove\", e => {
-      cursor.style.left = e.clientX + \"px\";
-      cursor.style.top = e.clientY + \"px\";
-    });
-  </script>
+  <section class="about">
+    <h2>About Us</h2>
+    <p>At Aegina Suite Ike, we offer high-end property management services tailored for owners and visitors seeking exceptional quality in the Saronic Gulf region.</p>
+  </section>
+
+  <section class="team">
+    <h2>Our Team</h2>
+    <div class="team-grid">
+      <div class="card expandable" tabindex="0">
+        <h3>PANAGIOTIS MARKIDIS</h3>
+        <p class="role">CEO & Co-Founder</p>
+        <div class="more-info">Panagiotis brings over a decade of real estate and hospitality experience.</div>
+      </div>
+      <div class="card expandable" tabindex="0">
+        <h3>CHRISTINA ECONOMOPOULOU</h3>
+        <p class="role">COO & Co-Founder</p>
+        <div class="more-info">Christina ensures flawless guest service with a background in operations and business.</div>
+      </div>
+    </div>
+  </section>
+
+  <section class="report">
+    <h2>Financial Report</h2>
+    <a class="download-btn" href="annual_earnings_report.pdf" download>Download Annual Earnings Report</a>
+  </section>
+
+  <script src="app.js"></script>
 </body>
 </html>
-
