--- a/index.html
+++ b/index.html
@@ -2,47 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Aegina Suite Ike</title>
-  <link rel="stylesheet" href="style.css"/>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+  <link rel="stylesheet" href="style.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 </head>
 <body>
-  <canvas id="three-canvas"></canvas>
-  <div id="custom-cursor"></div>
+  <div id="custom-cursor" class="black-cursor"></div>
 
-  <nav class="navbar">
-    <div class="logo">Aegina Suite</div>
-    <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="#team">Team</a></li>
-      <li><a href="#report">Report</a></li>
-    </ul>
-  </nav>
-
-  <header class="hero">
+  <header>
     <h1 id="animated-title">Property Management in the Saronic Gulf</h1>
     <p class="subtitle">Delivering boutique luxury experiences in Aegina, Hydra, and Poros</p>
   </header>
 
-  <section class="about" id="about">
+  <section class="about">
     <h2>About Us</h2>
-    <p>At Aegina Suite Ike, we offer high-end property management services tailored for owners and visitors seeking exceptional quality in the Saronic Gulf region. From short-term rentals to full concierge offerings, we ensure every guest experience is seamless.</p>
+    <p>
+      At Aegina Suite Ike, we offer high-end property management services tailored for owners and visitors seeking exceptional quality in the Saronic Gulf region. From short-term rentals to full concierge offerings, we ensure every guest experience is seamless.
+    </p>
   </section>
 
-  <section class="team" id="team">
+  <section class="team">
     <h2>Our Team</h2>
     <div class="team-grid">
-      <div class="card expandable" tabindex="0">
+      <div class="card expandable" tabindex="0" aria-expanded="false">
         <h3>PANAGIOTIS MARKIDIS</h3>
         <p class="role">CEO & Co-Founder</p>
         <div class="more-info" hidden>
           <p>Panagiotis brings over a decade of real estate and hospitality experience, focusing on innovation in luxury property management.</p>
         </div>
       </div>
-      <div class="card expandable" tabindex="0">
+      <div class="card expandable" tabindex="0" aria-expanded="false">
         <h3>CHRISTINA ECONOMOPOULOU</h3>
         <p class="role">COO & Co-Founder</p>
         <div class="more-info" hidden>
@@ -52,16 +42,11 @@
     </div>
   </section>
 
-  <section class="report" id="report">
+  <section class="report">
     <h2>Financial Report</h2>
     <a class="download-btn" href="annual_earnings_report.pdf" download>Download Annual Earnings Report</a>
   </section>
 
-  <footer>
-    <p>&copy; 2025 Aegina Suite Ike. All rights reserved.</p>
-  </footer>
-
   <script src="app.js"></script>
 </body>
 </html>
-
