--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -8,21 +8,33 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 </head>
 <body>
-  <div id="custom-cursor" class="black-cursor"></div>
+
+  <nav class="navbar">
+    <div class="nav-container">
+      <a href="#" class="logo">Aegina Suite Ike</a>
+      <ul class="nav-menu">
+        <li><a href="#about">About</a></li>
+        <li><a href="#team">Our Team</a></li>
+        <li><a href="#report">Report</a></li>
+      </ul>
+    </div>
+  </nav>
 
   <header>
     <h1 id="animated-title">Property Management in the Saronic Gulf</h1>
     <p class="subtitle">Delivering boutique luxury experiences in Aegina, Hydra, and Poros</p>
   </header>
 
-  <section class="about">
+  <section id="about" class="about">
+    <div class="section-bar"></div>
     <h2>About Us</h2>
     <p>
       At Aegina Suite Ike, we offer high-end property management services tailored for owners and visitors seeking exceptional quality in the Saronic Gulf region. From short-term rentals to full concierge offerings, we ensure every guest experience is seamless.
     </p>
   </section>
 
-  <section class="team">
+  <section id="team" class="team">
+    <div class="section-bar"></div>
     <h2>Our Team</h2>
     <div class="team-grid">
       <div class="card expandable" tabindex="0" aria-expanded="false">
@@ -42,7 +54,8 @@
     </div>
   </section>
 
-  <section class="report">
+  <section id="report" class="report">
+    <div class="section-bar"></div>
     <h2>Financial Report</h2>
     <a class="download-btn" href="annual_earnings_report.pdf" download>Download Annual Earnings Report</a>
   </section>
