--- a/index.html
+++ b/index.html
@@ -1,65 +1,81 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Aegina Suite Ike</title>
+  <title>Aegina Suite Ike | Luxury Property Management</title>
   <link rel="stylesheet" href="style.css" />
+  <!-- GSAP -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+  <!-- Three.js -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
 </head>
 <body>
 
-  <nav class="navbar">
+  <nav class="navbar" role="navigation" aria-label="Primary Navigation">
     <div class="nav-container">
-      <a href="#" class="logo">Aegina Suite Ike</a>
+      <a href="#" class="logo" aria-label="Aegina Suite Ike homepage">Aegina Suite Ike</a>
       <ul class="nav-menu">
-        <li><a href="#about">About</a></li>
-        <li><a href="#team">Our Team</a></li>
-        <li><a href="#report">Report</a></li>
+        <li><a href="#hero" tabindex="0">Home</a></li>
+        <li><a href="#about" tabindex="0">About</a></li>
+        <li><a href="#team" tabindex="0">Team</a></li>
+        <li><a href="#report" tabindex="0">Report</a></li>
       </ul>
     </div>
   </nav>
 
-  <header>
-    <h1 id="animated-title">Property Management in the Saronic Gulf</h1>
-    <p class="subtitle">Delivering boutique luxury experiences in Aegina, Hydra, and Poros</p>
-  </header>
-
-  <section id="about" class="about">
-    <div class="section-bar"></div>
-    <h2>About Us</h2>
-    <p>
-      At Aegina Suite Ike, we offer high-end property management services tailored for owners and visitors seeking exceptional quality in the Saronic Gulf region. From short-term rentals to full concierge offerings, we ensure every guest experience is seamless.
-    </p>
-  </section>
-
-  <section id="team" class="team">
-    <div class="section-bar"></div>
-    <h2>Our Team</h2>
-    <div class="team-grid">
-      <div class="card expandable" tabindex="0" aria-expanded="false">
-        <h3>PANAGIOTIS MARKIDIS</h3>
-        <p class="role">CEO & Co-Founder</p>
-        <div class="more-info" hidden>
-          <p>Panagiotis brings over a decade of real estate and hospitality experience, focusing on innovation in luxury property management.</p>
-        </div>
-      </div>
-      <div class="card expandable" tabindex="0" aria-expanded="false">
-        <h3>CHRISTINA ECONOMOPOULOU</h3>
-        <p class="role">COO & Co-Founder</p>
-        <div class="more-info" hidden>
-          <p>Christina has a background in operations and international business, ensuring flawless guest service and scalable growth.</p>
-        </div>
-      </div>
+  <!-- Hero Section -->
+  <section id="hero" class="hero-section" aria-label="Introduction">
+    <canvas id="hero-canvas" aria-hidden="true"></canvas>
+    <div class="hero-content">
+      <h1 class="hero-title">Property Management in the Saronic Gulf</h1>
+      <p class="hero-subtitle">Delivering boutique luxury experiences in Aegina, Hydra, and Poros</p>
+      <a href="#about" class="btn-primary" aria-label="Learn more about us">Learn More</a>
     </div>
   </section>
 
-  <section id="report" class="report">
-    <div class="section-bar"></div>
-    <h2>Financial Report</h2>
-    <a class="download-btn" href="annual_earnings_report.pdf" download>Download Annual Earnings Report</a>
+  <!-- About Section -->
+  <section id="about" class="content-section" tabindex="-1" aria-labelledby="about-heading">
+    <hr class="section-separator" />
+    <h2 id="about-heading">About Us</h2>
+    <p>
+      Aegina Suite Ike offers premier property management services in the Saronic Gulf, providing luxury, comfort, and flawless hospitality tailored for discerning clients and visitors.
+    </p>
   </section>
 
-  <script src="app.js"></script>
+  <!-- Team Section -->
+  <section id="team" class="content-section" tabindex="-1" aria-labelledby="team-heading">
+    <hr class="section-separator" />
+    <h2 id="team-heading">Our Team</h2>
+    <div class="team-grid">
+      <article class="team-card expandable" tabindex="0" aria-expanded="false" aria-controls="panagiotis-bio">
+        <h3 class="team-name">PANAGIOTIS MARKIDIS</h3>
+        <p class="team-role">CEO & Co-Founder</p>
+        <div id="panagiotis-bio" class="team-bio">
+          <p>Panagiotis brings 15+ years of luxury property management experience with a focus on client satisfaction and operational excellence.</p>
+        </div>
+      </article>
+
+      <article class="team-card expandable" tabindex="0" aria-expanded="false" aria-controls="christina-bio">
+        <h3 class="team-name">CHRISTINA ECONOMOPOULOU</h3>
+        <p class="team-role">COO & Co-Founder</p>
+        <div id="christina-bio" class="team-bio">
+          <p>Christina oversees day-to-day operations ensuring seamless service delivery and innovative guest experiences.</p>
+        </div>
+      </article>
+    </div>
+  </section>
+
+  <!-- Report Section -->
+  <section id="report" class="content-section" tabindex="-1" aria-labelledby="report-heading">
+    <hr class="section-separator" />
+    <h2 id="report-heading">Annual Earnings Report</h2>
+    <a href="assets/AeginaSuiteIke_AnnualReport2024.pdf" download class="btn-primary" aria-label="Download Annual Earnings Report">
+      Download Report
+    </a>
+  </section>
+
+  <script src="app.js" defer></script>
 </body>
 </html>
