--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
     </p>
   </section>
 
-  <!-- Team Section -->
-  <section id="team" class="content-section" tabindex="-1" aria-labelledby="team-heading">
-    <hr class="section-separator" />
-    <h2 id="team-heading">Our Team</h2>
+<!-- Team Section -->
+<section id="team" class="content-section" tabindex="-1" aria-labelledby="team-heading">
+  <hr class="section-separator" />
+  <h2 id="team-heading">Our Team</h2>
+  <div class="team-container">
     <div class="team-grid">
       <article class="team-card expandable" tabindex="0" aria-expanded="false" aria-controls="panagiotis-bio">
         <h3 class="team-name">PANAGIOTIS MARKIDIS</h3>
@@ -65,7 +66,9 @@
         </div>
       </article>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- Report Section -->
   <section id="report" class="content-section" tabindex="-1" aria-labelledby="report-heading">
