--- a/index.html
+++ b/index.html
@@ -3,82 +3,70 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Aegina Suite Ike | Luxury Property Management</title>
+  <title>Aegina Suites IKE</title>
   <link rel="stylesheet" href="style.css" />
-  <!-- GSAP -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-  <!-- Three.js -->
-  <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
 </head>
 <body>
-
-  <nav class="navbar" role="navigation" aria-label="Primary Navigation">
-    <div class="nav-container">
-      <a href="#" class="logo" aria-label="Aegina Suite Ike homepage">Aegina Suite Ike</a>
-      <ul class="nav-menu">
-        <li><a href="#hero" tabindex="0">Home</a></li>
-        <li><a href="#about" tabindex="0">About</a></li>
-        <li><a href="#team" tabindex="0">Team</a></li>
-        <li><a href="#report" tabindex="0">Report</a></li>
-      </ul>
-    </div>
+  <nav class="navbar frosted-glass">
+    <ul class="menu">
+      <li><a href="#home" class="menu-link">Home</a></li>
+      <li><a href="#about" class="menu-link">About Us</a></li>
+      <li><a href="#team" class="menu-link">Our Team</a></li>
+      <li><a href="#report" class="menu-link">Report</a></li>
+    </ul>
   </nav>
 
-  <!-- Hero Section -->
-  <section id="hero" class="hero-section" aria-label="Introduction">
-    <canvas id="hero-canvas" aria-hidden="true"></canvas>
-    <div class="hero-content">
-      <h1 class="hero-title">Property Management in the Saronic Gulf</h1>
-      <p class="hero-subtitle">Delivering boutique luxury experiences in Aegina, Hydra, and Poros</p>
-      <a href="#about" class="btn-primary" aria-label="Learn more about us">Learn More</a>
-    </div>
-  </section>
+  <header id="home" class="hero-section">
+    <h1 class="main-title">
+      Property Management in the <span class="highlighted-border">Saronic Gulf</span>
+    </h1>
+    <p class="subtitle">Currently delivering boutique luxury experiences in Aegina</p>
+  </header>
 
-  <!-- About Section -->
-  <section id="about" class="content-section" tabindex="-1" aria-labelledby="about-heading">
-    <hr class="section-separator" />
-    <h2 id="about-heading">About Us</h2>
+  <section id="about" class="section about-section">
+    <h2 class="section-title">About Us</h2>
     <p>
-      Aegina Suite Ike offers premier property management services in the Saronic Gulf, providing luxury, comfort, and flawless hospitality tailored for discerning clients and visitors.
+      Aegina Suites IKE is a premium property management company specializing in boutique luxury experiences within Aegina. Our projects are designed to stand out in both form and function.
+    </p>
+    <p>
+      We believe that true luxury lies in thoughtful details, seamless service, and exclusive locality — and we bring all three together in the heart of the Saronic Gulf.
     </p>
   </section>
 
-<!-- Team Section -->
-<section id="team" class="content-section" tabindex="-1" aria-labelledby="team-heading">
-  <hr class="section-separator" />
-  <h2 id="team-heading">Our Team</h2>
-  <div class="team-container">
-    <div class="team-grid">
-      <article class="team-card expandable" tabindex="0" aria-expanded="false" aria-controls="panagiotis-bio">
+  <section id="team" class="section team-section">
+    <h2 class="section-title">Our Team</h2>
+    <div class="team-cards">
+      <div class="team-card">
         <h3 class="team-name">PANAGIOTIS MARKIDIS</h3>
-        <p class="team-role">CEO & Co-Founder</p>
-        <div id="panagiotis-bio" class="team-bio">
-          <p>Panagiotis brings 15+ years of luxury property management experience with a focus on client satisfaction and operational excellence.</p>
-        </div>
-      </article>
-
-      <article class="team-card expandable" tabindex="0" aria-expanded="false" aria-controls="christina-bio">
+        <p class="team-role">CEO & Co-founder</p>
+        <p class="team-description">15 years of experience in property management. Leads with vision and strategic clarity.</p>
+      </div>
+      <div class="team-card">
         <h3 class="team-name">CHRISTINA ECONOMOPOULOU</h3>
-        <p class="team-role">COO & Co-Founder</p>
-        <div id="christina-bio" class="team-bio">
-          <p>Christina oversees day-to-day operations ensuring seamless service delivery and innovative guest experiences.</p>
-        </div>
-      </article>
+        <p class="team-role">COO & Co-founder</p>
+        <p class="team-description">Expert in hospitality operations and quality control. Elevates client experience.</p>
+      </div>
+      <div class="team-card">
+        <h3 class="team-name">GEORGE PAPADOPOULOS</h3>
+        <p class="team-role">Financial Advisor</p>
+        <p class="team-description">Oversees fiscal planning and growth strategies for long-term success.</p>
+      </div>
     </div>
-  </div>
-</section>
-
-
-  <!-- Report Section -->
-  <section id="report" class="content-section" tabindex="-1" aria-labelledby="report-heading">
-    <hr class="section-separator" />
-    <h2 id="report-heading">Annual Earnings Report</h2>
-    <a href="assets/AeginaSuiteIke_AnnualReport2024.pdf" download class="btn-primary" aria-label="Download Annual Earnings Report">
-      Download Report
-    </a>
   </section>
 
-  <script src="app.js" defer></script>
+  <section id="report" class="section report-section">
+    <h2 class="section-title">Annual Earnings Report</h2>
+    <a href="annual-earnings-report.pdf" download class="download-btn">Download Report</a>
+    <p class="report-description">
+      Our most recent annual report reflects record growth in boutique hospitality investments across Aegina.
+    </p>
+  </section>
+
+  <footer class="footer">
+    <p>© 2025 Aegina Suites IKE. All rights reserved.</p>
+    <p>Website concept inspired by Apple & Wix design philosophy.</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
