--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Custom cursor -->
-  <div class="custom-cursor"></div>
 
   <nav class="navbar frosted-glass">
     <ul class="menu">
@@ -21,7 +19,7 @@
 
   <header id="home" class="hero-section">
     <h1 class="main-title">
-      Property Management in the
+      Property Management&nbsp;&nbsp; 
       <span class="highlighted-border">Saronic Gulf</span>
     </h1>
     <p class="subtitle">Currently delivering boutique luxury experiences in Aegina</p>
@@ -55,14 +53,6 @@
           <p>Christina oversees operations and ensures excellence in service delivery across all properties.</p>
         </div>
       </div>
-
-      <div class="team-card" tabindex="0" role="button" aria-expanded="false" aria-controls="advisor-info" data-member="advisor">
-        <h3 class="team-name">GEORGE PAPADOPOULOS</h3>
-        <p class="team-role">Financial Advisor</p>
-        <div class="team-info" id="advisor-info" hidden>
-          <p>George brings financial expertise to guide sustainable and profitable development for the company.</p>
-        </div>
-      </div>
     </div>
   </section>
 
@@ -76,7 +66,6 @@
 
   <footer class="footer">
     <p>© 2025 Aegina Suites IKE. All rights reserved.</p>
-    <p>Website concept inspired by Apple & Wix design philosophy.</p>
   </footer>
 
   <script src="script.js"></script>
