--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
   <nav class="navbar frosted-glass">
     <ul class="menu">
       <li><a href="#home" class="menu-link">Home</a></li>
@@ -19,8 +18,8 @@
 
   <header id="home" class="hero-section">
     <h1 class="main-title">
-      Property Management&nbsp;&nbsp; 
-      <span class="highlighted-border">Saronic Gulf</span>
+      Property Management in the
+      <span class="highlighted-text">Saronic Gulf</span>
     </h1>
     <p class="subtitle">Currently delivering boutique luxury experiences in Aegina</p>
   </header>
@@ -40,7 +39,7 @@
     <div class="team-cards">
       <div class="team-card" tabindex="0" role="button" aria-expanded="false" aria-controls="panagiotis-info" data-member="panagiotis">
         <h3 class="team-name">PANAGIOTIS MARKIDIS</h3>
-        <p class="team-role">CEO & Co-founder</p>
+        <p class="team-role">CEO &amp; Co-founder</p>
         <div class="team-info" id="panagiotis-info" hidden>
           <p>Panagiotis has 15 years of experience in property management and leads the company with strategic vision.</p>
         </div>
@@ -48,7 +47,7 @@
 
       <div class="team-card" tabindex="0" role="button" aria-expanded="false" aria-controls="christina-info" data-member="christina">
         <h3 class="team-name">CHRISTINA ECONOMOPOULOU</h3>
-        <p class="team-role">COO & Co-founder</p>
+        <p class="team-role">COO &amp; Co-founder</p>
         <div class="team-info" id="christina-info" hidden>
           <p>Christina oversees operations and ensures excellence in service delivery across all properties.</p>
         </div>
