--- a/index.html
+++ b/index.html
@@ -37,19 +37,20 @@
   <section id="team" class="section team-section">
     <h2 class="section-title">Our Team</h2>
     <div class="team-cards">
-      <div class="team-card" tabindex="0" role="button" aria-expanded="false" aria-controls="panagiotis-info" data-member="panagiotis">
-        <h3 class="team-name">PANAGIOTIS MARKIDIS</h3>
-        <p class="team-role">CEO &amp; Co-founder</p>
-        <div class="team-info" id="panagiotis-info" hidden>
-          <p>Panagiotis has 15 years of experience in property management and leads the company with strategic vision.</p>
+      <div class="team-card" tabindex="0">
+        <div class="team-image"></div>
+        <div class="team-content">
+          <h3 class="team-name">PANAGIOTIS MARKIDIS</h3>
+          <p class="team-role">CEO & Co-founder</p>
+          <p class="team-info">Panagiotis has 15 years of experience in property management and leads the company with strategic vision.</p>
         </div>
       </div>
-
-      <div class="team-card" tabindex="0" role="button" aria-expanded="false" aria-controls="christina-info" data-member="christina">
-        <h3 class="team-name">CHRISTINA ECONOMOPOULOU</h3>
-        <p class="team-role">COO &amp; Co-founder</p>
-        <div class="team-info" id="christina-info" hidden>
-          <p>Christina oversees operations and ensures excellence in service delivery across all properties.</p>
+      <div class="team-card" tabindex="0">
+        <div class="team-image"></div>
+        <div class="team-content">
+          <h3 class="team-name">CHRISTINA ECONOMOPOULOU</h3>
+          <p class="team-role">COO & Co-founder</p>
+          <p class="team-info">Christina oversees operations and ensures excellence in service delivery across all properties.</p>
         </div>
       </div>
     </div>
@@ -67,6 +68,6 @@
     <p>© 2025 Aegina Suites IKE. All rights reserved.</p>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
