--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Aegina Suites IKE</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
   <nav class="navbar frosted-glass">
@@ -19,8 +20,8 @@
   </nav>
 
   <header id="home" class="hero-section">
-    <h1 class="main-title">
-      Property Management in the <span class="highlighted-text">Saronic Gulf</span>
+    <h1 class="main-title blue-glow">
+      Property Management in the <span class="highlighted-blue">Saronic Gulf</span>
     </h1>
     <p class="subtitle">Currently delivering boutique luxury experiences in Aegina</p>
   </header>
@@ -40,7 +41,7 @@
     <div class="team-cards">
       <div class="team-card" tabindex="0" role="button" aria-expanded="false" aria-controls="panagiotis-info" data-member="panagiotis">
         <h3 class="team-name">PANAGIOTIS MARKIDIS</h3>
-        <p class="team-role">CEO & Co-founder</p>
+        <p class="team-role">CEO &amp; Co-founder</p>
         <div class="team-info" id="panagiotis-info" hidden>
           <p>Panagiotis has 15 years of experience in property management and leads the company with strategic vision.</p>
         </div>
@@ -48,7 +49,7 @@
 
       <div class="team-card" tabindex="0" role="button" aria-expanded="false" aria-controls="christina-info" data-member="christina">
         <h3 class="team-name">CHRISTINA ECONOMOPOULOU</h3>
-        <p class="team-role">COO & Co-founder</p>
+        <p class="team-role">COO &amp; Co-founder</p>
         <div class="team-info" id="christina-info" hidden>
           <p>Christina oversees operations and ensures excellence in service delivery across all properties.</p>
         </div>
